TrainingCellDll/Interface.h

	/// <summary>
	/// Returns index of the single agent in case "single agent mode" is on of "-2" otherwise
	/// </summary>
	TRAINING_CELL_API int TdlEnsembleAgentGetSingleAgentId(TrainingCell::TdlEnsembleAgent* ensemble_agent_ptr);
	/// <summary>
	/// Allocates agent-pack for the given TD(lambda)-ensemble agent and returns pointer to it (or null-pointer if something went wrong)
	/// </summary>
	TRAINING_CELL_API void* PackTdlEnsembleAgent(const TrainingCell::TdlEnsembleAgent* agent_ptr);
	/// <summary>
	/// Returns pointer to constant instance of the sub-agent with the given id
	/// </summary>
	TRAINING_CELL_API const void* TdlEnsembleAgentGetSubAgentPtr(const TrainingCell::TdlEnsembleAgent* agent_ptr, const int sub_agent_id);