Monitor/Dll/DllWrapper.cs


        /// <summary>
        /// Wrapper for the corresponding method
        /// </summary>
        [DllImport(dllName: DllName)]
        public static extern int TdlEnsembleAgentGetSingleAgentId(IntPtr ensembleAgentPtr);

        /// <summary>
        /// Wrapper for the corresponding method
        /// </summary>
        [DllImport(dllName: DllName)]
        public static extern IntPtr PackTdlEnsembleAgent(IntPtr ensembleAgentPtr);

        /// <summary>
        /// Wrapper for the corresponding method
        /// </summary>
        [DllImport(dllName: DllName)]
        public static extern IntPtr TdlEnsembleAgentGetSubAgentPtr(IntPtr ensembleAgentPtr, int subAgentId);
        #endregion
    }
}
